BucketServiceImpl configured